--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
+sudo: false
 rvm:
-- 2.4.1
+- 2.4.3
 
 before_script:
  - chmod +x ./script/cibuild # or do this locally and commit
@@ -17,5 +18,3 @@ branches:
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
-
-sudo: false # route your build to the container-based infrastructure for a faster build
