--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-# Site settings
+## Site settings
 title: Nickolas Gupton
 tagline:
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.nickolasgupton.me" # the base hostname & protocol for your site
+url: "http://www.nickolasgupton.com" # the base hostname & protocol for your site
 
-# Plugins
-plugins: ["jekyll-paginate"]
+## Plugins
+plugins: [jekyll-paginate]
 exclude: [vendor]
 
-# Build settings
+## Build settings
 markdown: kramdown
 sass:
   sass_dir: assets/sass
 
-# Pagination
+## Pagination
 paginate: 4
 paginate_path: "/blog/page:num/"
