--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -6,22 +6,23 @@ on:
       - master
 
 jobs:
-  jekyll:
+  buildDeploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout the code
-      uses: actions/checkout@master
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
 
-    - name: Use GitHub Actions cache
-      uses: actions/cache@master
+    - name: Cache
+      uses: actions/cache@v2.1.4
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
         restore-keys: |
           ${{ runner.os }}-gems-
 
-    - name: Deploy the site
-      uses: helaili/jekyll-action@master
+    - name: Build and deploy the site
+      uses: helaili/jekyll-action@2.1.0
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         target_branch: 'gh-pages'
