--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Build and deploy the site
       uses: helaili/jekyll-action@2.1.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT }}
         target_branch: 'gh-pages'
