--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,8 @@ sonar.projectKey=CorruptComputer_CorruptComputer.GitHub.io
 sonar.organization=corruptcomputer
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=CorruptComputer.GitHub.io
-#sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.projectName=CorruptComputer.GitHub.io
+sonar.projectVersion=1.0
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
