--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=CorruptComputer_CorruptComputer.GitHub.io
+sonar.projectKey=CorruptComputer_home
 sonar.organization=corruptcomputer
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=CorruptComputer.GitHub.io
+sonar.projectName=home
 sonar.projectVersion=1.0
 
 # Encoding of the source code. Default is default system encoding
