--- a/.github/workflows/build-scan.yml
+++ b/.github/workflows/build-scan.yml
@@ -11,12 +11,18 @@ jobs:
     name: Build and scan
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the site in the jekyll/builder container
-      run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true
+        cache-version: 0 # Increment this number if you need to re-download cached gems
+    - name: Build with Jekyll
+      # Outputs to the './_site' directory by default
+      run: bundle exec jekyll build --future"
+      env:
+        JEKYLL_ENV: production
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
