--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     schedule:
       interval: "daily"
     groups:
-      web:
+      nuget:
         patterns:
           - "*"
   - package-ecosystem: "github-actions"
@@ -14,6 +14,6 @@ updates:
     schedule:
       interval: "daily"
     groups:
-      pipeline:
+      actions:
         patterns:
           - "*"
