--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Debug Home",
             "type": "dotnet",
             "request": "launch",
-            "projectPath": "${workspaceFolder}/AppHost/AppHost.csproj",
+            "projectPath": "${workspaceFolder}/AppHost/AppHost.csproj"
         }
     ]
 }
